fix tables to be responsive even when carded layout is not selected, also fixed a bug with extra whitespace at the end of lines

--- a/resources/gato-template/css/table.scss
+++ b/resources/gato-template/css/table.scss
@@ -68,7 +68,7 @@
     }
 }
 
-.tableScroll {
+.table-wrapper {
   min-height: .01%;
   overflow-x: auto;
 }
